<resources>
    <string name="app_name">Friendies</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_download">Download</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_library">Library</string>

    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_setting">Setting</string>
    <string name="title_switch_account">switch_account</string>
    <string name="title_about">About</string>
    <string name="title_data">Your data in Friendies</string>
    <string name="title_help">Help and Feedback</string>

    <string name="title_logout">Use Friendies signed out</string>
    <string name="title_Add_account">Add Account</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="search">Search</string>

    <string-array name="camera">
        <item></item>
        <item>Take Photo</item>
        <item>Choose Photo</item>
    </string-array>
</resources>
