<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/ic_category"
        android:title="@string/title_category" />
    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/title_download" />

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/title_bookmark" />



    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_library"
        android:title="@string/title_library" />

</menu>
