<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.friendies.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.friendies.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_download"
        android:name="com.example.friendies.ui.download.DownloadFragment"
        android:label="@string/title_download"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.friendies.ui.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_library"
        android:name="com.example.friendies.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />
</navigation>
